--- a/project/test/crypto.html
+++ b/project/test/crypto.html
@@ -326,6 +326,43 @@
 			</div>
 		</div>
 	</section>
+	<section class="progress">
+		<div class="wrapper">
+			<div class="block">
+				<div class="block__title-row">
+					<h3 class="block__title">Maker in progress</h3>
+					<span class="block__dot">•</span>
+					<p class="block__sub-title">Collection in progress</p>
+					<span class="block__dot">•</span>
+					<p class="block__sub-title">Completed</p>
+				</div>
+				<div class="progress__table">
+					<table class="block__table">
+						<thead>
+							<tr>
+								<th>Time</th>
+								<th>Coin</th>
+								<th>Amount</th>
+								<th>Coin rate</th>
+								<th>Estimated benefit</th>
+								<th>Progress</th>
+								<th>Cycle</th>
+								<th>Executed Automatic maker</th>
+								<th>Status</th>
+								<th>Action</th>
+							</tr>
+						</thead>
+					</table>
+					<div class="block__none-data">
+						<img 
+							src="./img/elem/no-data.png" 
+							alt=""
+						/>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	
 	<footer class="footer">
 		<div class="footer__top">
