--- a/project/test/main-acc.html
+++ b/project/test/main-acc.html
@@ -167,12 +167,12 @@
 	</div>
 	<section class="head">
 		<div class="head__tit-box">
-			<h2 class="head__title">
+			<h2 class="head__title-big">
 				Find the next precious <br />
 				stone among cryptocurrencies <br />
 				on bit<span>look</span>
 			</h2>
-			<p class="head__sun-title">
+			<p class="head__sun-title mt30">
 				1 out of 4 Cryptocurrency Holders in the World with mybit.exchange
 			</p>
 			<button 
@@ -660,37 +660,7 @@
 			</li>
 		</ul>
 	</section>
-	<footer class="footer">
-		<div class="footer__top">
-			<h3 class="footer__part">PARTNERS</h3>
-			<ul class="footer__part-list">
-				<li class="footer__part-item">
-					<img 
-						src="./img/content/partners/brave.png" 
-						alt=""
-					/>
-				</li>
-				<li class="footer__part-item">
-					<img 
-						src="./img/content/partners/TCC.png" 
-						alt=""
-					/>
-				</li>
-				<li class="footer__part-item">
-					<img 
-						src="./img/content/partners/kyber.png" 
-						alt=""
-					/>
-				</li>
-				<li class="footer__part-item">
-					<img 
-						src="./img/content/partners/poool.png" 
-						alt=""
-					/>
-				</li>
-			</ul>
-			<a href="#" class="btn-or">Register now</a>
-		</div>
+	<footer class="footer footer--nw">
 		<div class="footer__bot">
 			<div class="footer__line">
 				<div class="footer__row-links">
