--- a/project/test/main.html
+++ b/project/test/main.html
@@ -151,12 +151,12 @@
 	</div>
 	<section class="head">
 		<div class="block__tit-box">
-			<h2 class="block__title">
+			<h2 class="block__title-big">
 				Find the next precious <br />
 				stone among cryptocurrencies <br />
 				on bit<span>look</span>
 			</h2>
-			<p class="block__sun-title">
+			<p class="block__sun-title  mt30">
 				1 out of 4 Cryptocurrency Holders in the World with mybit.exchange
 			</p>
 			<button 
