--- a/project/test/navigation.html
+++ b/project/test/navigation.html
@@ -45,7 +45,16 @@
 			<a href="./table-staking.html">Table staking</a>
 		</li>
 		<li>
-			<a href="./main-accHead.html">main with header</a>
+			<a href="./main-acc.html">main with acc</a>
+		</li>
+		<li>
+			<a href="./building.html">building</a>
+		</li>
+		<li>
+			<a href="./crypto-acc.html">crypto with acc</a>
+		</li>
+		<li>
+			<a href="./index.html">oll pop up and live chat</a>
 		</li>
 	</ul>
 	<script type="text/javascript" src="js/swiper-bundle.min.js"></script>
